--- a/style_responsivo.css
+++ b/style_responsivo.css
@@ -13,8 +13,8 @@
     }
     
     .texugo {
-        max-width: 100px;
-        max-height: 100px;
+        max-width: 0px;
+        max-height: 0px;
         text-align: right;
         margin: 0%;
         margin-left: 57%;
@@ -163,7 +163,7 @@
     
     .topicos {
         padding-top: 1%;
-        padding-left: 0%;
+        padding-left: 2%;
         padding-bottom: 1;
         font-size: 17px;
         text-align: start;
@@ -171,19 +171,19 @@
     }
     
     .topicos-text {
-        padding-left: 2%;
+        padding-left: 5%;
         padding-right: 3%; 
         font-size: 13px;
-        text-align: center;
+        text-align: start;
     }
     
     .topicos-text-end {
-        padding-left: 2%;
+        padding-left: 5%;
         padding-right: 3%;
         padding-bottom: 3%;
         font-size: 13px;
         padding-bottom: 1%;
-        text-align: center;
+        text-align: start;
     }
     
     .title-conteudo-01 {
